--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
             to { opacity: 1; transform: translateY(0); }
         }
         .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24; }
+
+        @media print {
+            @page { margin: 0.5cm; size: landscape; }
+            body { 
+                background-color: #131022 !important; 
+                -webkit-print-color-adjust: exact; 
+                print-color-adjust: exact;
+            }
+            header, .no-print { display: none !important; }
+            .print-full-width { max-width: 100% !important; margin: 0 !important; padding: 0 !important; }
+            /* Force dark mode colors in print if user is in dark mode */
+            .bg-card-dark { background-color: #1c182f !important; border: 1px solid #292348 !important; }
+            .text-white { color: #ffffff !important; }
+            .text-text-secondary { color: #9b92c9 !important; }
+        }
     </style>
 <script type="importmap">
 {
