feat: Add PDF export functionality
Integrates `html2canvas` and `jspdf` to enable exporting dashboard views and custom reports as PDF documents. This feature enhances data sharing and archival capabilities within the C_Andromeda Dashboard.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     "vite": "https://esm.sh/vite@^7.3.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.11.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@vitejs/plugin-basic-ssl": "https://esm.sh/@vitejs/plugin-basic-ssl@^2.1.0"
+    "@vitejs/plugin-basic-ssl": "https://esm.sh/@vitejs/plugin-basic-ssl@^2.1.0",
+    "html2canvas": "https://esm.sh/html2canvas@1.4.1",
+    "jspdf": "https://esm.sh/jspdf@2.5.1"
   }
 }
 </script>
