--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "@vitejs/plugin-basic-ssl": "https://esm.sh/@vitejs/plugin-basic-ssl@^2.1.0",
     "html2canvas": "https://esm.sh/html2canvas@1.4.1",
-    "jspdf": "https://esm.sh/jspdf@2.5.1"
+    "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "@vercel/kv": "https://esm.sh/@vercel/kv@^3.0.0"
   }
 }
 </script>
